css/main.css
* p {
	margin-top: 0;
	line-height: 1.75;
	font-size: 14px;
}

* a {
	margin-top: 0;
	line-height: 1.75;
	font-size: 14px;
}

* h3 {
	font-size: 30px;
	font-weight: normal;

	margin: 0;
	padding: 20px 0 0 0;
}

@font-face {
	font-family: Delicious;
	src: url("fonts/Delicious-Roman.otf") format("opentype");
}

@font-face {
	font-family: Delicious;
	font-weight: bold;
	src: url("fonts/Delicious-Bold.otf") format("opentype");
}

body {
	margin: 0;
	padding: 0;

	-webkit-font-smoothing: antialiased;
	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
	font-family: 'Delicious', 'Arial', 'Helvetica', sans-serif;

	/*background-color: #fff5d1;*/
	background-color: #fff2c4;
}

#nav-bar {
	position: relative;

	z-index: 1;
	background-color: #585858;
	display: block;

	width: 100%;
	height: 3em;
}

#nav-bar div {
	position: relative;
	margin: 0 auto 0 auto;
	width: 95%;
	max-width: 970px;
}

#nav-bar h2 {
	position: relative;
	margin: 0;
	padding-left: 0.5em;

	line-height: 1.5;

	color: #ffffff;

	font-size: 30px;
	float: left;
}

.stripe {
	position:fixed;
	width:100%;
	height: 50%;
	margin: auto;

	top:0;
	bottom:0;
}

.sub-stripe {

	position:relative;
	width:100%;
}

footer {
	position: relative;
	background-color: #585858;
	color: #ffffff;

	bottom: 0;

	width: 100%;
	height: 6em;
}

footer a {
	color: #ffffff;
	padding: auto 0 auto;
	text-align: center;
	text-decoration: none;
}

footer .top {
	position: relative;
	margin: 0 auto;

	line-height: 4;

	height: 4em;
	text-align: center;
}

footer .bottom {
	position: relative;
	margin: 0 auto 0 auto;

	line-height: 2;

	color: #ffffff;
	font-size: 12px;
	border-top: solid 1px #424242;

	width: 98%;
	max-width: 970px;
}

#main {
	display: block;
	position: relative;
	clear: both;
	z-index: 0;

	padding-top: 1em;
	width: 100%;
}

#main-content {
	position: relative;
	z-index: 2;
	overflow: hidden;

	width: 98%;
	max-width: 970px;

	margin: 0 auto;

	/*background-color: #fff9e6;*/
}

#main-container {
	position: relative;
	float: left;
	width: 66%;
}

/* Rows */

.row {
	display: block;
	position: relative;

	margin: 1em 0 1em 0;
	padding: 0em 1em 1em 1em;

	color: #ffffff;
	background-color: #585858;

	border-radius: 4px;
	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
}

.row ul {
	margin: 0;
	padding: 0;
}

.light {
	color: #585858;
	background-color: #fff9e6;
}

/* Sidebar */
#side-bar {
	display: block;
	position: relative;
	float: right;

	width: 33%;
	min-width: 320px;
}

#side-bar #bio {
	display: block;
	overflow: hidden;
}

#side-bar #bio img {
	width: 10%;
	height: 10%;

	float: left;

	min-width: 7em;
	min-height: 7em;

	margin-right: 1em;
	border-radius: 10px;
}

/* Project Grid */

#project-grid {
	padding: 1em;
	z-index: 5;
}

.project-cell {
	position: relative;

	height: 20em;

	max-width: 20em;
	max-height: 20em;
	overflow: hidden;

	margin-left: auto;
	margin-right: auto;

	color: #585858;
	border-color: #585858
}

.project-cell .info-section {
	position: absolute;
	width: 100%;

	text-align: center;
	font-size: 12px;

	min-height: 17px;

	bottom: 10px;
	border-bottom-color: #585858;
}

.project-cell .title {
	position: relative;
	padding: 2px 0px 2px 0px;

	font-size: 18px;
	min-height: 24px;

	border-bottom: 1px solid;
}

.project-cell .description {
	position: relative;
	padding: 2px 0 2px 0;
	border-bottom: 1px solid;
}

#screenshots {
	display: block;
	position: relative;

	width: 100%;
}

#screenshots img {
	margin: 0 auto 0 auto;
	width: 32%;
}

.img-container {
	display: block;
	position: relative;
	overflow: hidden;

	width: 100%;
	height: 100%;

	max-width: 20em;
	max-height: 20em;

	float: left;
}

.img-container img {
	position: absolute;

	left: 0;
	top: 0;

	width: 100%;
	height: auto;
	opacity: 0.8;
}

/* icons */

.icon {
	display: inline-block;
	height: 30px;

	margin: 0 1em 1em 1em;

	text-decoration: none;
	clear: both;
}

.icon p {
	vertical-align: middle;
	display: inline-block;
	padding: 0 0.5em;
	color: white;
}

.icon img {
	display: inline-block;
	position: relative;
	opacity: 0.4;

	margin: auto;

	width: 30px;
	height: 30px;

	border-radius: 0;
}

